--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="50">
     <tr>
-      <td> <img src="images/shreyas.jpg" alt="profile picture"></td>
+      <td> <img src="shreyas.png" alt="profile picture"></td>
       <td>
         <h1>Shreyas Chigurupati</h1>
         <p><em><strong><a href="https://rvce.edu.in/me-menu">Mechanical Engineer🔧</a></strong><br>graduated from <a href="https://www.rvce.edu.in/">RV College of Engineering.</a></em></p>
